Replaced annimon stream with wrapper