@@ -17,17 +17,15 @@ package de.dreier.mytargets.features.settings;
 
 import android.content.Context;
 import android.support.annotation.NonNull;
-import android.support.v4.util.Pair;
 import android.support.v7.preference.ListPreference;
 import android.util.AttributeSet;
-
-import com.annimon.stream.Collectors;
-import com.annimon.stream.Stream;
 
 import java.util.Arrays;
 import java.util.List;
 
+import de.dreier.mytargets.shared.streamwrapper.Stream;
 import im.delight.android.languages.LanguageList;
+import kotlin.Pair;
 
 /**
  * Preference that extends ListPreference and can be used in XML (or Java) to offer a custom language selection
@@ -79,15 +77,14 @@ public class LanguagePreference extends ListPreference {
 
     private void init() {
         List<Pair<String, String>> pairList = Stream
-                .zip(Arrays.asList(LanguageList.getHumanReadable()).iterator(), Arrays
-                        .asList(LanguageList.getMachineReadable()).iterator(), Pair::new)
-                .filter(pair -> SUPPORTED_LOCALES.contains(pair.second))
-                .collect(Collectors.toList());
+                .zip(LanguageList.getHumanReadable(), LanguageList.getMachineReadable())
+                .filter(pair -> SUPPORTED_LOCALES.contains(pair.component2()))
+                .toList();
 
         // use the list of human-readable language names for the displayed list
-        setEntries(Stream.of(pairList).map(p -> p.first).toArray(String[]::new));
+        setEntries(Stream.of(pairList).map(Pair::component1).toArray(String[]::new));
         // use the list of machine-readable language names for the saved values
-        setEntryValues(Stream.of(pairList).map(p -> p.second).toArray(String[]::new));
+        setEntryValues(Stream.of(pairList).map(Pair::component2).toArray(String[]::new));
         // use an empty language code (no custom language) as the default
         setDefaultValue("");
         // set the summary to be auto-updated to the selected value
